# lis3dh-spi

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: ctrl_reg_0_value.rs  ctrl_reg_1_value.rs  ctrl_reg_2_value.rs  ctrl_reg_3_value.rs  ctrl_reg_4_value.rs  ctrl_reg_5_value.rs  enabled_enum.rs  int_cfg.rs  int_duration_value.rs  int_src.rs  int_ths_value.rs  lib.rs  mode.rs  status_reg_aux_value.rs  status_reg_aux_values.rs  temp_cfg_reg.rs  temp_cfg_reg_value.rs
